# mimiweb-desktop

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.en.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: build.md
scripts/: build-portable.ps1  make-release.ps1
src/: App.css  App.tsx  lamejs.d.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_tables.sql
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
src-tauri/src/analysis/: keywords.rs
src-tauri/src/commands/: article.rs  history.rs  keywords.rs  login.rs  mod.rs  piper.rs  queue.rs  settings.rs  setup.rs  update.rs
src-tauri/src/models/: article.rs  history.rs  mod.rs  queue.rs  settings.rs
src-tauri/src/repositories/: article_repository.rs  history_repository.rs  keyword_repository.rs  mod.rs  queue_repository.rs  settings_repository.rs
src-tauri/src/services/: mod.rs  piper_manager.rs  process_guard.rs  voicevox_manager.rs  webview_scraper.rs
src-tauri/windows/: hooks.nsi
src/__mocks__/: tauri-api-event.ts
src/__tests__/: tauriCommands.test.ts  textArticleLifecycle.test.ts
src/__type_tests__/: commands.ts
src/lib/: audioCache.test.ts  audioCache.ts  audioNormalizer.test.ts  audioNormalizer.ts  contentExtractor.test.ts  contentExtractor.ts  keybindings.ts  languageSegmenter.test.ts  languageSegmenter.ts  mp3Encoder.ts  piperClient.test.ts  piperClient.ts  summarize.test.ts  (+4 more)
(+41 files in other folders)
